# node-audio

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile  audio-napi.cc  binding.gyp  bridge.c  build.bat  build_libwebm.bat  cli.js  conanfile.txt  gen.ps1  index.js  jest.config.js  main.go  openssl-hide.map  package.json  webm_muxer.cc  webm_muxer.h
cmake/: FindFFmpeg.cmake  Findffmpeg.cmake
sample/: CMakeLists.txt  transcoding.c  webm2mp4.cc
src/: addon_api.h  audio-napi.cc  av_api.cc  buffer_io.c  buffer_io.h  cmdutils.c  cmdutils.h  combine.cc  combine.h  config.h  decfile.c  duration.c  duration.cc  enc_reader.h  enc_writer.h  export.h  ff_help.h  ffmpeg.c  ffmpeg.h  ffmpeg_dec.c  ffmpeg_demux.c  ffmpeg_filter.c  ffmpeg_mux.c  ffmpeg_mux.h  ffmpeg_mux_init.c  ffmpeg_opt.c  ffprobe.c  fixwebm.cc  fixwebm.h  fopen_utf8.h  get_volume.c  get_volume.cc  metatags.cc  metatags.h  napi_help.cc  napi_help.h  opt_common.c  opt_common.h  pthread.h  pthread_win32.h  (+9 more)
src/avcpp/: CMakeLists.txt
src/compat/: getenv_utf8.h  w32dlfcn.h  w32pthreads.h  wchar_filename.h
src/encrypt/: CMakeLists.txt  htobe64.h  joye_reader.c  joye_reader.h  joye_writer.c  joye_writer.h  test_reader.c  test_writer.c
test/: 1.webm  2.webm  addwebm-test.js  bridge.c  comb.js  fix-webm.js  fixup_webm.test.js  fixwebm.js  get_audio_duration.js  get_audio_volume.js  get_metadata.js  index.js  probe.js  record.js  sample.js  test.webm  volume.js
test/electron/: index.js  main.html  main.js  package.json
toolchains/: linux-arm64-toolchain.cmake  linux-loong64-toolchain.cmake
